--- a/applications/templates/mails/include/arrival_departure_info.html
+++ b/applications/templates/mails/include/arrival_departure_info.html
@@ -1,2 +1,2 @@
 {% if h_arrive %}<p><b>When to arrive</b> {{ h_arrive }}</p>{% endif %}
-{% if h_leave %}<p><b>When to leave</b> {{ h_leave }}</p>{% endif %}
+{% if h_leave_hacker %}<p><b>When to leave</b> {{ h_leave_hacker }}</p>{% endif %}
