--- a/applications/templates/mails/last_reminder_message.html
+++ b/applications/templates/mails/last_reminder_message.html
@@ -10,7 +10,7 @@
         but you still haven't either confirmed or canceled your spot.
 
         <b>You have 24h to answer, after that, your application will expire and we will give your spot to another
-            hacker.</b>
+          {{ type }}.</b>
     </p>
     {% include 'mails/include/email_button.html' with text='Confirm' url=confirm_url %}
 
