--- a/applications/templates/mails/invitation_message.html
+++ b/applications/templates/mails/invitation_message.html
@@ -2,9 +2,31 @@
 {% block preheader %}Acceptance email for {{ h_name }}{% endblock %}
 
 {% block content %}
-    <p>
-        Congratulations {{ name }}, you have been officially invited to <b>{{ h_name }}</b>!
-    </p>
+    {% if is_hacker %}
+        <p>
+            Congratulations {{ name }}, you have been officially invited to <b>{{ h_name }}</b>!
+        </p>
+    {% elif is_volunteer %}
+        <p>
+          Thanks for applying as a volunteer for HackUPC 2021! Volunteering is one of the most important roles and we need people like you.
+        </p>
+        <p>
+          Therefore, we invite you to help us achieving our goals during this hackathon.
+        </p>
+        <p>
+          Don't forget to help us sharing HackUPC with your friends so that they can enjoy as well (sharing is caring).
+        </p>
+    {% elif is_mentor %}
+        <p>Hi {{ name }}!</p>
+        <p>
+          First of all, thanks for applying to our mentorship program. We are glad to inform you that you have been chosen
+          to be a mentor during this new {{ h_name }} edition!
+        </p>
+        <p>
+          When the event is closer, we'll contact you again and we'll invite you to our Slack group, used for organizing
+          and hackers communication
+        </p>
+    {% endif %}
     <p>
         Respond to this invitation by clicking on the "Confirm" link below.
         <b>Please confirm your spot within 5 days of receiving this email. Otherwise we will give your spot to another
