--- a/applications/templates/mails/include/arrival_departure_info.html
+++ b/applications/templates/mails/include/arrival_departure_info.html
@@ -1,6 +1,6 @@
 {% if h_arrive %}<p><b>When to arrive</b> {{ h_arrive }}</p>{% endif %}
-{% if is_hacker %}
-    {% if h_leave_hacker %}<p><b>When to leave</b> {{ h_leave_hacker }}</p>{% endif %}
+{% if is_hacker or is_sponsor %}
+    {% if h_leave_hacker_sponsor %}<p><b>When to leave</b> {{ h_leave_hacker_sponsor }}</p>{% endif %}
 {% else %}
     {% if h_leave_other %}<p><b>When to leave</b> {{ h_leave_other }}</p>{% endif %}
 {% endif %}
