--- a/stats/templates/mentor_stats.html
+++ b/stats/templates/mentor_stats.html
@@ -1,8 +1,8 @@
 {% extends 'c3_base.html' %}
 
-{% block head_title %}Volunteer stats{% endblock %}
+{% block head_title %}Mentor stats{% endblock %}
 {% block panel %}
-    <h1>Volunteer stats</h1>
+    <h1>Mentor stats</h1>
     <small class="pull-right"><b>Last updated:</b> <span id="update_date"></span></small>
     <div class="row">
         <div class="col-md-12">
@@ -33,54 +33,19 @@
             <div id="origin_confirmed_stats"></div>
         </div>
     </div>
-    <h2>University</h2>
+    <h2>Student or worker</h2>
 
     <div class="row">
         <div class="col-md-6">
             <h3>All</h3>
-            <div id="university_stats"></div>
+            <div id="study_work_stats"></div>
         </div>
         <div class="col-md-6">
             <h3>Confirmed only</h3>
-            <div id="university_confirmed_stats"></div>
+            <div id="study_work_confirmed_stats"></div>
         </div>
     </div>
-    <h2>Graduation year</h2>
 
-    <div class="row">
-        <div class="col-md-6">
-            <h3>All</h3>
-            <div id="graduation_year_stats"></div>
-        </div>
-        <div class="col-md-6">
-            <h3>Confirmed only</h3>
-            <div id="graduation_year_confirmed_stats"></div>
-        </div>
-    </div>
-    <h2>Degree</h2>
-
-    <div class="row">
-        <div class="col-md-6">
-            <h3>All</h3>
-            <div id="degree_stats"></div>
-        </div>
-        <div class="col-md-6">
-            <h3>Confirmed only</h3>
-            <div id="degree_confirmed_stats"></div>
-        </div>
-    </div>
-  <h2>First timer</h2>
-
-    <div class="row">
-        <div class="col-md-6">
-            <h3>All</h3>
-            <div id="first_timer_stats"></div>
-        </div>
-        <div class="col-md-6">
-            <h3>Confirmed only</h3>
-            <div id="first_timer_confirmed_stats"></div>
-        </div>
-    </div>
     <h2>T-Shirts sizes</h2>
 
     <div class="row">
@@ -113,11 +78,9 @@
 {% endblock %}
 {% block c3script %}
     <script>
-        $.getJSON('{% url 'api_volunteer_stats' %}', function (data) {
-          var bar_stats = ['tshirt', 'tshirt_confirmed', 'diet', 'diet_confirmed', 'origin', 'origin_confirmed',
-            'university', 'university_confirmed', 'degree', 'degree_confirmed'];
-          var donut_stats = ['status', 'gender', 'graduation_year', 'first_timer', 'first_timer_confirmed',
-            'graduation_year_confirmed'];
+        $.getJSON('{% url 'api_mentor_stats' %}', function (data) {
+          var bar_stats = ['tshirt', 'tshirt_confirmed', 'diet', 'diet_confirmed', 'origin', 'origin_confirmed'];
+          var donut_stats = ['status', 'gender', 'study_work', 'study_work_confirmed'];
           bar_stats.forEach(function (element) {
                   c3.generate({
                     bindto: '#'+element+'_stats',
