--- a/stats/templates/volunteer_stats.html
+++ b/stats/templates/volunteer_stats.html
@@ -81,6 +81,19 @@
             <div id="first_timer_confirmed_stats"></div>
         </div>
     </div>
+
+    <h2>Attendance</h2>
+
+    <div class="row">
+        <div class="col-md-6">
+            <h3>All</h3>
+            <div id="attendance_stats"></div>
+        </div>
+        <div class="col-md-6">
+            <h3>Confirmed only</h3>
+            <div id="attendance_confirmed_stats"></div>
+        </div>
+    </div>
     <h2>T-Shirts sizes</h2>
 
     <div class="row">
@@ -115,7 +128,7 @@
     <script>
         $.getJSON('{% url 'api_volunteer_stats' %}', function (data) {
           var bar_stats = ['tshirt', 'tshirt_confirmed', 'diet', 'diet_confirmed', 'origin', 'origin_confirmed',
-            'university', 'university_confirmed', 'degree', 'degree_confirmed'];
+            'university', 'university_confirmed', 'degree', 'degree_confirmed', 'attendance', 'attendance_confirmed'];
           var donut_stats = ['status', 'gender', 'graduation_year', 'first_timer', 'first_timer_confirmed',
             'graduation_year_confirmed'];
           bar_stats.forEach(function (element) {
