UX fixes & flake8 fix

--- a/stats/templates/application_stats.html
+++ b/stats/templates/application_stats.html
@@ -1,8 +1,8 @@
 {% extends 'c3_base.html' %}
 
-{% block head_title %}Application stats{% endblock %}
+{% block head_title %}Hacker stats{% endblock %}
 {% block panel %}
-    <h1>Application stats</h1>
+    <h1>Hacker stats</h1>
     <small class="pull-right"><b>Last updated:</b> <span id="update_date"></span></small>
     <div class="row">
         <div class="col-md-12">
