--- a/stats/templates/checkin_stats.html
+++ b/stats/templates/checkin_stats.html
@@ -13,7 +13,22 @@
   <h2>Attrition rate</h2>
     <div class="row">
         <div class="col-md-6">
-            <div id="attrition_rate"></div>
+            <h3>Hackers</h3>
+            <div id="hacker_attrition_rate"></div>
+        </div>
+        <div class="col-md-6">
+            <h3>Volunteers</h3>
+            <div id="volunteer_attrition_rate"></div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <h3>Mentors</h3>
+            <div id="mentor_attrition_rate"></div>
+        </div>
+        <div class="col-md-6">
+            <h3>Sponsors</h3>
+            <div id="sponsor_attrition_rate"></div>
         </div>
     </div>
 {% endblock %}
@@ -47,19 +62,22 @@
                     }
                 }
             });
-            c3.generate({
-                bindto: '#attrition_rate',
-                data: {
-                    json: data['attrition_rate'],
-                    type: 'gauge',
-                },
-                color: {
-                  pattern: ['#FF0000', '#F97600', '#F6C600', '#60B044'],
-                  threshold: {
-                    values: [30, 60, 90, 100]
-                  }
-                },
-            });
+            var list = ['hacker', 'volunteer', 'mentor', 'sponsor']
+            list.forEach(element => {
+                c3.generate({
+                    bindto: '#' + element + '_attrition_rate',
+                    data: {
+                        json: data[element + '_attrition_rate'],
+                        type: 'gauge',
+                    },
+                    color: {
+                    pattern: ['#FF0000', '#F97600', '#F6C600', '#60B044'],
+                    threshold: {
+                        values: [30, 60, 90, 100]
+                    }
+                    },
+                });
+            })
             $('#update_date').html(data['update_time']);
             $('#checkin_count').html(data['checkin_count']);
         });
