Hacker & sponsors works

--- a/app/static/css/tabs.css
+++ b/app/static/css/tabs.css
@@ -3,7 +3,7 @@
     -moz-border-radius: 0;
     border-radius: 0;
     background: #C2BEBE;
-    box-shadow: inset 0 -5px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.1);
     margin: 0;
     font-style: normal;
     line-height: normal;
@@ -35,15 +35,16 @@
     margin: 0;
 }
 
-.nav-tabs > li.active > a {
-    box-shadow: 0 -4px 4px rgba(0, 0, 0, 0.1);
+.nav-tabs > li.active_tab > a {
+    box-shadow: 0 -4px 4px rgba(0, 0, 0, 0.25);
     color: black;
     border-left: none !important;
     border-right: none !important;
+    border-top: none !important;
     padding-bottom: 10px;
 }
 
-.nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:active, .nav-tabs > li.active > a:focus {
+.nav-tabs > li.active_tab > a:hover, .nav-tabs > li.active > a:active, .nav-tabs > li.active > a:focus {
     box-shadow: 0 -4px 4px rgba(0, 0, 0, 0.1);
     color: black;
 
