--- a/applications/templates/dashboard.html
+++ b/applications/templates/dashboard.html
@@ -20,7 +20,7 @@
             </div>
         {% elif not application %}
             <div class="col-md-12">
-                {% if h_app_timeleft %}
+                {% if h_app_timeleft and not is_sponsor %}
                     <div class="alert alert-info">
                         <p> Time until applications close: <strong
                                 class="text-info">{% include 'include/deadline_countdown.html' %}</strong></p>
