--- a/app/static/css/tabs.css
+++ b/app/static/css/tabs.css
@@ -63,6 +63,16 @@
         padding-left: 10px;
         padding-right: 10px;
     }
+
+    .nav-tabs > li.active_tab > a {
+    box-shadow: 0 -4px 4px rgba(0, 0, 0, 0.25);
+    color: black;
+    border-left: none !important;
+    border-right: none !important;
+    border-top: none !important;
+    padding-bottom: 9px;
+    padding-top: 9px;
+}
 }
 
 .active_tab {
