--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -30,7 +30,7 @@
             {% endfor %}
         </fieldset>
     {% endfor %}
-    {% if not is_sponsor %}
+    {% if is_hacker %}
     <p class="team-info"><i class="fa fa-exclamation-triangle"></i> <strong>Remember!</strong> Your team members still have to apply separately.</p>
     {% endif %}
     <small><span style="color: red">*</span>Indicates required field.</small>
