--- a/checkin/templates/include/input.html
+++ b/checkin/templates/include/input.html
@@ -58,6 +58,7 @@
             var el = document.getElementById("veil");
             el.parentNode.removeChild(el);
             scanner.stop();
+            document.getElementById("checkin-search").submit();
         }
     </script>
   {% else %}
