--- a/organizers/templates/applications_list.html
+++ b/organizers/templates/applications_list.html
@@ -20,7 +20,7 @@
             <a href="{% url 'invite_list' %}" class="btn-block btn btn-default">Send hacker invites</a>
         </div>
     {% elif otherApplication and emailCopy %}
-      <div>
+      <div style="padding-top: 15px;">
         <div class="col-md-8">
           <input class="form-control" id='copy' type="text" value={{ emails }}/>
         </div>
