--- a/organizers/templates/include/number10.html
+++ b/organizers/templates/include/number10.html
@@ -1,17 +1,9 @@
 <div class="">
     <select name="{{ name }}" class="barrating " required>
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5" selected>5</option>
-        <option value="6">6</option>
-        <option value="7">7</option>
-        <option value="8">8</option>
-        <option value="9">9</option>
-        <option value="10">10</option>
+      {% for int, str in max_vote.items %}
+        <option value={{ str }}>{{ int }}</option>
+      {% endfor %}
     </select>
 </div>
-
 
 
