Reimbursements on hackers

--- a/stats/templates/ranking.html
+++ b/stats/templates/ranking.html
@@ -1,9 +1,9 @@
 {% extends "base_table.html" %}
 {% load humanize %}
 {% load static %}
-{% block head_title %}Reviewers Ranking{% endblock %}
+{% block head_title %}Organizer stats{% endblock %}
 {% block extra_panel %}
-
+    <h2>Ranking</h2>
     <p>So you think you have reviewed tons, huh?</p>
     <p>Drop your self esteem and look at the ranking.</p>
 {% endblock %}
